# sea-orm-column-name-bug

./: .env  Cargo.toml  create.sql
src/: main.rs
