[package]
name = "sea-orm-column-name-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0.7.1", default-features = false, features = [ "runtime-tokio-rustls", "sqlx-mysql", "macros" ] }
anyhow = "^1.0.57"
tokio = { version = "^1.18.0", features = [ "macros" ] }
dotenv = "^0.15.0"
